welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:2: error: illegal start of simple expression
if(a==2&&b==2&&c==2){return 10}else{if(a==b&&c==b){return 5}else{if(b==a! && c==a!){return 1}else{return 0}
                                                                                  ^redTicket:3: error: ')' expected but '}' found.
}
^